# mercury-wallet

./: .dockerignore  .gitignore  .testcafe-electron-rc.json  .travis.yml  .yarnrc  Dockerfile  README.md  afterSignHook.js  config-overrides.js  cypress.config.ts  jest-environment-uint8array-27.js  jest.config.js  lightning_adapter.txt  main.js  package-lock.json  package.json  public.key  setup.js  travis.yml  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  docker.yml  main.yml  release.yml  test.yml
app/: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  test-main.js  tsconfig.json
app/client/: README.md  package.json
app/client-wasm/: Cargo.toml  tree.txt
app/client-wasm/pkg/: client_wasm.d.ts  client_wasm_bg.js  client_wasm_bg.wasm  client_wasm_bg.wasm.d.ts  package.json
app/client-wasm/src/: daemon.rs  error.rs  js_wrapper.rs  js_wrappers.rs  lib.rs
app/client/lib/: index.js
app/client/native/: Cargo.toml  artifacts.json  index.node
app/client/native/src/: daemon.rs  error.rs  js_wrappers.rs  lib.rs  server.rs
app/client/native/src/state_entity/: api.rs  deposit.rs  withdraw.rs
app/client/native/src/wallet/: shared_key.rs  wallet.rs
app/client/shared/: Cargo.toml
app/hello_world/: package-lock.json
app/hello_world/lib/: index.js
app/hello_world/native/: artifacts.json
app/neon-lib/: package.json
app/neon-lib/native/: Cargo.toml
app/neon-lib/native/src/: lib.rs
app/public/: index.html
app/shared/: Cargo.toml
app/src/: .gitignore  electron-starter.js  electron-wait-react.js  index.js  store.js
app/src/components/: index.css  index.js
app/src/containers/: App.js  Settings.js
app/src/features/: CoinDataSlice.js  StoredDataSlice.js
app/src/reducers/: index.js  storedData.js
app/src/ts_wallet/: deposit.ts  index.js  request.ts  tsconfig.json  wallet.ts
app/src/wallet/: deposit.js  index.js  request.js  wallet.js
app/wasm-pack-template/: Cargo.toml
app/wasm-pack-template/src/: lib.rs
client-wasm/: Cargo.toml
client-wasm/pkg/: client_wasm.d.ts  client_wasm.js  client_wasm_bg.js  client_wasm_bg.wasm  client_wasm_bg.wasm.d.ts  package.json
client-wasm/src/: js_wrapper.rs  kms_secp256k1_js_wrapper.rs  lib.rs  monotree_js_wrapper.rs  pow_js_wrapper.rs  requests.rs  swap_js_wrapper.rs  util_js_wrapper.rs  vdf_js_wrapper.rs
cypress/e2e/: create_wallet.cy.ts  deposit_coin.cy.ts  lightning_deposit.cy.ts  load_wallet.cy.ts  main_navigation.cy.ts  open_channel.cy.ts  recover_wallet.cy.ts  restore_wallet.cy.ts  swap_coins.cy.ts  switch_wallet.cy.ts  withdraw_coin.cy.ts
cypress/support/: commands.ts
doc/: privacy.md
lightning-adapter/: .gitignore  database.js  electrum.mjs  getRoutes.js  index.js  index.tsx  lightning.js  lightning.mjs  lightningClient.js  lightningDB.js  lightningUtils.js  logger.js  package.json  postRoutes.js  server.js  torClient.mjs
lightning-adapter/.ldk/: keys_seed
lightning-adapter/lib/: MercuryEventHandler.js  MercuryFeeEstimator.js  MercuryLogger.js  MercuryPersistor.js  YourFeeEstimator.js
lightning-adapter/lightning/: MercuryChannelMessageHandler.mjs  MercuryCustomMessageHandler.mjs  MercuryEventHandler.mjs  MercuryFeeEstimator.mjs  MercuryFeeEstimator.ts  MercuryFilter.mjs  MercuryLogger.mjs  MercuryOnionMessageHandler.mjs  MercuryPersister.mjs  MercuryRoutingMessageHandler.mjs  NodeLDKNet.mjs
lightning-adapter/routes/: channelRoutes.js  getRoutes.js  peerRoutes.js  postRoutes.js
lightning-adapter/src/: server.js
lightning-adapter/src/db/: db.ts
lightning-adapter/src/routes/: serverRoutes.ts
lightning-adapter/test/: channelRoutes.test.js  db-mock.js  db.test.js  getRoutes.test.js
public/: electron.js  index.html  preload.js
public/icons/: mercury-symbol-tri-color.icns
public/tor-adapter/server/: tor_client.js
resources/LICENCES/: LICENCE_node
resources/etc/: torrc
resources/linux/: tor
resources/mac/: libboost_atomic.dylib  libboost_filesystem.dylib  libssl.3.dylib  tor
spectron-test/: index.test.js
src/: electron-starter.js  electron-wait-react.js  electron.js  error.ts  index.css  index.js  network.json  preload.js  settings.json  settings.json-e  store.ts  worker.js  wrapped_logger.js
src/application/: reduxStore.js  store.js  warnings.js  webStore.js  wrappedStore.js
src/components/: index.css  index.js  index.jsx
src/components/Activity/: Activity.css
src/components/AddressDisplay/: AddressDisplay.js  AddressDisplay.jsx
src/components/AutoSwapToggle/: AutoSwapToggle.js  AutoSwapToggle.jsx
src/components/BackupWalletPopup/: BackupWalletPopup.css  BackupWalletPopup.jsx  index.css  index.js
src/components/Buttons/: StandardButton.js  ToggleButton.js
src/components/ChannelClosePopup/: ChannelClosePopup.js
src/containers/: index.js
src/containers/App/: App.css  (+2 more)
src/e2e/: e2e.test.js
src/features/: LightningDataSlice.js  ThemeSlice.js  WalletDataSlice.js  WalletInfoSlice.js  WalletWebDataSlice.js
src/lightning-ldk/: const.tsx  index.tsx  testing.tsx  util.tsx
src/reducers/: index.js
src/ts_wallet/: deposit.ts  tsconfig.json
src/wallet/: action_log.ts  activity_log.ts  channel.ts  config.ts  electrs.ts  electrs_local.ts  electrum.ts  eps.ts  error.ts  http_client.ts  index.js  ldk_client.ts  lightning.js  logger.ts  recovery.ts  request.ts  shared_key.ts  statecoin.ts  tor.js  tor_client.js  types.ts  util.ts  wallet.test.js  wallet.ts
static/: liblightningjs.wasm
tor/: package.json
tor-adapter/: Dockerfile  package-lock.json  package.json
tor-adapter/server/: anon_client.js  cn_client.js  config.js  electrum.js  eps.js  error.js  index.js  logger.js  routes.js  settings.json  testnet_settings.json  tor_client.js
tor/server/: index.js
tor/tor/: cached-certs  cached-microdesc-consensus  state
ts-lightning-adapter/: lightning-mock.db  lightning.db  package.json  tsconfig.json
ts-lightning-adapter/.ldk/: keys_seed
ts-lightning-adapter/src/: debug_lightning.ts  server.ts
ts-lightning-adapter/test/: channelRoutes.test.ts  db-mock.ts  db.test.js  getRoutes.test.ts  peerRoutes.test.ts
(+2206 files in other folders)
