[package]
name = "client_wasm"
version = "0.1.0"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "tester"
path = "src/tester.rs"

[dependencies]
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.24"
serde_derive = "1.0"
bitcoin = { version = "0.25", features = [ "use-serde" ]}
floating-duration = "0.1.2"
web-sys = { version = "0.3.45", features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'ReadableStream',
  'Response',
  'RequestDestination',
  'Window']}
reqwest = { version = "0.10" }
# futures = "0.3.1"
# untokio = { version = "0.1", features = ["v02"] }

[dev-dependencies]
mockito = "0.27.0"
wasm-bindgen-test = "0.3.13"

[dependencies.multi-party-ecdsa]
git = "https://github.com/commerceblock/multi-party-ecdsa"
branch = "client_version"
#
[dependencies.curv]
git = "https://github.com/commerceblock/curv"
features =  ["ec_secp256k1"]
branch = "client_version"
#
[dependencies.kms]
git = "https://github.com/commerceblock/kms-secp256k1"
default-features = false
branch = "client_version"

[dependencies.paillier]
git = "https://github.com/commerceblock/rust-paillier"
branch = "client_version"

[dependencies.zk-paillier]
git = "https://github.com/commerceblock/zk-paillier"
branch = "client_version"

[target.'cfg(unix)'.dependencies]
tokio-uds = "0.2.0"
users = "0.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
