[package]
name = "client_wasm"
version = "0.1.0"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = { version = "0.2.51", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.1"
wasm-bindgen-test = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.24"
serde_derive = "1.0"
bitcoin = { version = "0.25", features = [ "use-serde" ]}
bitcoin_hashes = "0.9"
floating-duration = "0.1.2"
web-sys = { version = "0.3.45", features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'ReadableStream',
  'Response',
  'RequestDestination',
  'Window']}
console_error_panic_hook = "0.1.6"
hex = "0.4.2"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
schemars = { version = "0.8.0-alpha-4", features = ["chrono", "uuid"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
rocket_okapi = "0.6.0-alpha-1"
#mercury_shared =  { git = "https://github.com/commerceblock/mercury", package="shared" }

[dev-dependencies]
mockito = "0.27.0"
wasm-bindgen-test = "0.3.13"

[dependencies.multi-party-ecdsa]
git = "https://github.com/commerceblock/multi-party-ecdsa"
branch = "client_version"

[dependencies.curv]
git = "https://github.com/commerceblock/curv"
features =  ["ec_secp256k1"]
branch = "client_version"

[dependencies.kms]
git = "https://github.com/commerceblock/kms-secp256k1"
default-features = false
branch = "client_version"

[dependencies.paillier]
git = "https://github.com/commerceblock/rust-paillier"
branch = "client_version"

[dependencies.zk-paillier]
git = "https://github.com/commerceblock/zk-paillier"
branch = "client_version"

[dependencies.monotree]
git = "https://github.com/commerceblock/monotree"
tag = "0.1.3.1"
default-features = false
features=["hasher-blake3"]

[target.'cfg(unix)'.dependencies]
tokio-uds = "0.2.0"
users = "0.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
