[package]
name = "client-wasm"
version = "0.1.0"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.24"
serde_derive = "1.0"
bitcoin = { version = "0.25", features = [ "use-serde" ] }
curv = { path = "./curv", features =  ["ec_secp256k1"]}
web-sys = { version = "0.3.45", features = ['console'] }


[dev-dependencies]
mockito = "0.27.0"
wasm-bindgen-test = "0.3.13"


[target.'cfg(unix)'.dependencies]
tokio-uds = "0.2.0"
users = "0.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

# [dependencies.shared]
# path = "../shared"
