[package]
name = "client"
version = "0.2.0"
authors = []
edition = "2018"

[lib]
name = "server_lib"
crate-type = ["cdylib"]
path = "src/server.rs"

# [[bin]]
# name = "rustd-client"
# path = "src/client.rs"
#
# [[bin]]
# name = "rustd-server"
# path = "src/server.rs"

[dependencies]
neon = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.24"


clap = "2.32"
tokio = { version = "0.1.18" }
daemon-engine = "0.6.0"

[build-dependencies]
neon-build = "0.3.3"

[target.'cfg(unix)'.dependencies]
tokio-uds = "0.2.0"
users = "0.7"
