[package]
name = "neon-lib"
version = "0.1.0"
build = "build.rs"
edition = "2018"

[lib]
name = "neon_lib"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
tag = "v0.2.2"
features =  ["ec_secp256k1"]
